Statistiques production essaims, ajout "Note"

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -214,6 +214,7 @@ Duree=Durée
 aideStatistiqueEssaim=Durée d'existence de l'essaim en jours<br/>Poids de miel produit en kg :<br/>- Total sur la durée d'existence<br/>- Récolte Max et Min<br/>- Moyen par année d'existence
 masquerInactif=Masquer les inactifs
 Production=Production
+Note=Note
 
 # essaim/essaimsStatAges.html
 Moyenne=Moyenne
