--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -214,6 +214,7 @@ Duree=Duration
 aideStatistiqueEssaim=Swarm duration of existence (days)<br/>Weight of honey produced in kg :<br/>- Total over duration of existence<br/>- Harvest Max and Min<br/>- Average by year of existence
 masquerInactif=Hide inactives
 Production=Production
+Note=Mark
 
 # essaim/essaimsStatAges.html
 Moyenne=Mean
