essaim statistiques note écart standardisé par rapport à la moyenne. doc

--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -215,6 +215,7 @@ aideStatistiqueEssaim=Swarm duration of existence (days)<br/>Weight of honey pro
 masquerInactif=Hide inactives
 Production=Production
 Note=Mark
+NbRecolte=Harvest nb 
 
 # essaim/essaimsStatAges.html
 Moyenne=Mean
