--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -215,6 +215,7 @@ aideStatistiqueEssaim=Durée d'existence de l'essaim en jours<br/>Poids de miel 
 masquerInactif=Masquer les inactifs
 Production=Production
 Note=Note
+NbRecolte=Nb récoltes
 
 # essaim/essaimsStatAges.html
 Moyenne=Moyenne
