Statistique sur détail récolte : moyenne, écat type par rucher

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -458,6 +458,7 @@ poidsVideKg=Poids vide {0}kg
 HausseRec=Hausse Récolte
 
 # recolte/recolteDetail.html
+Statistiques=Statistiques
 HaussesGroup=Groupées par ruche
 Retirerhausses=Retirer les hausses
 SaisiePoidsMiel=Saisie des poids de miel
