--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -458,6 +458,7 @@ poidsVideKg=Empty weight {0}kg
 HausseRec=Harvest Super
 
 # recolte/recolteDetail.html
+Statistiques=Statistics
 HaussesGroup=Grouped by hive
 Retirerhausses=Remove the supers
 SaisiePoidsMiel=Honey weight entry
