recolteStat ajout liste essaims,ruchers

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -218,8 +218,8 @@ Note=Note
 NbRecolte=Nb récoltes
 
 # essaim/essaimsStatAges.html
-Moyenne=Moyenne
-EcartType= Écart type
+MoyenneE=Moyenne essaim
+EcartTypeE= Écart type essaim
 ageDesReines=Âge des reines
 nbReinesTotal=Nombre de reines Total
 jours=jours
