--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -218,8 +218,8 @@ Note=Mark
 NbRecolte=Harvest nb 
 
 # essaim/essaimsStatAges.html
-Moyenne=Mean
-EcartType= Standard deviation
+MoyenneE=Swarm Mean
+EcartTypeE= Swarm Standard deviation
 ageDesReines=Age of queens
 nbReinesTotal=Number of queens Total
 jours=days
