recolteStat : poids de miel, nb hausses pour un essaim et une récolte

--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -434,6 +434,8 @@ tel=Phone
 
 #################### recolte ########################################
 
+# recolte/recolteStat.html
+nbHausses=Nb supers
 # recolte/recoltesStatEssaim.html
 Totalpage=Total page
 ProductionEssaims=Production. Swarms/
