--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -434,6 +434,9 @@ tel=Téléphone
 
 #################### recolte ########################################
 
+# recolte/recolteStat.html
+nbHausses=Nb hausses
+
 # recolte/recoltesStatEssaim.html
 Totalpage=Total page
 ProductionEssaims=Production Essaims/
