recolteStat ajout ecart moyenne et note

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -436,6 +436,7 @@ tel=Téléphone
 
 # recolte/recolteStat.html
 nbHausses=Nb hausses
+EcartMoyenne=Écart moyenne
 
 # recolte/recoltesStatEssaim.html
 Totalpage=Total page
