--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -436,6 +436,8 @@ tel=Phone
 
 # recolte/recolteStat.html
 nbHausses=Nb supers
+EcartMoyenne=Deviation from average
+
 # recolte/recoltesStatEssaim.html
 Totalpage=Total page
 ProductionEssaims=Production. Swarms/
