recolteStat.html ajout parts poids récolte et rucher %

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -437,6 +437,8 @@ tel=Téléphone
 # recolte/recolteStat.html
 nbHausses=Nb hausses
 EcartMoyenne=Écart moyenne
+partRecPCent=Part récolte %
+partRrucherPCent=Part rucher %
 
 # recolte/recoltesStatEssaim.html
 Totalpage=Total page
