--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -437,6 +437,8 @@ tel=Phone
 # recolte/recolteStat.html
 nbHausses=Nb supers
 EcartMoyenne=Deviation from average
+partRecPCent=Harvest share %
+partRrucherPCent=Apiary share %
 
 # recolte/recoltesStatEssaim.html
 Totalpage=Total page
