ajout d'un lot d'événements cadres

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -240,6 +240,7 @@ selectessaimstraiter=Sélectionner les essaims à traiter
 evenementsSucre=Ajouter des événements Sucre
 evenementsTraitement=Ajouter des événements Traitement
 evenementsCommentaire=Ajouter des événements Commentaire
+evenementsCadres=Ajouter des événements Cadres
 BLUE=Bleu
 WHITE=Blanc
 YELLOW=Jaune
@@ -257,6 +258,9 @@ listeEssaims=Liste des essaims
 
 # essaim/essaimSucreLotForm.html
 ajoutSucreLot=Ajout de sucre au lot
+
+# essaim/essaimCadreLotForm.html
+cadreLot=Ajout d'événments cadre au lot
 
 # essaim/essaimTraitementLotForm.html
 traitementLot=Traitement Varroa du lot
