--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -240,6 +240,7 @@ selectessaimstraiter=Select swarms for treatment
 evenementsSucre=Add sugar events
 evenementsTraitement=Add treatment events
 evenementsCommentaire=Add comment events
+evenementsCadres=Add frame events
 BLUE=Blue
 WHITE=White
 YELLOW=Yellow
@@ -257,6 +258,9 @@ listeEssaims=Swarms list
 
 # essaim/essaimSucreLotForm.html
 ajoutSucreLot=Add sugar to the batch
+
+# essaim/essaimCadreLotForm.html
+cadreLot=Adding frame events to the batch
 
 # essaim/essaimTraitementLotForm.html
 traitementLot=Batch Varroa treatment 
