recolte stat : poids miel min et max par rucher

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -443,6 +443,8 @@ nbHausses=Nb hausses
 EcartMoyenne=Écart moyenne
 partRecPCent=Part récolte %
 partRrucherPCent=Part rucher %
+MinE=Min essaim
+MaxE=Max essaim
 
 # recolte/recoltesStatEssaim.html
 Totalpage=Total page
