--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -443,6 +443,8 @@ nbHausses=Nb supers
 EcartMoyenne=Deviation from average
 partRecPCent=Harvest share %
 partRrucherPCent=Apiary share %
+MinE=Swarm min
+MaxE=Swarm max
 
 # recolte/recoltesStatEssaim.html
 Totalpage=Total page
