recolteHausseForm ajouté controle input non vide

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -554,6 +554,7 @@ selectruchestraiter=Sélectionner les ruches à traiter
 ajouterRuche=Ajouter une ruche
 listeRuches=Liste des ruches
 type=Type
+TousRuchers=Tous les ruchers
 
 # ruche/ruchesListeRucher.html
 daterucher=Date rucher
