--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -489,7 +489,6 @@ poidsMielPot=Honey weight jarred
 poidsMielMoyen=Honey average weight per hive
 XhaussesRec={0} harvest supers
 
-
 # recolte/recoltesStat.html
 productionessaim=Production by swarm. 
 poidsMielHausses=Supers honey weight
@@ -555,6 +554,7 @@ selectruchestraiter=Select hives for treatment
 ajouterRuche=Add a hive
 listeRuches=Hives list
 type=Type
+TousRuchers=All apiaries
 
 # ruche/ruchesListeRucher.html
 daterucher=Apiary date
