recolteChoixHausses.html ajout option affichage toutes les hausses

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -462,6 +462,8 @@ retirerHausses=Retirer des hausses
 ajouterHausses=Ajouter des hausses
 selecthaussesretirer=Sélectionner les hausses à retirer
 selecthaussesajouter=Sélectionner les hausses à ajouter
+AffTtHausse=Afficher toutes les hausses. Si vous ajoutez des hausses dont l'essaim ou le rucher ne sont pas renseignés, il faudra compléter les hausses de récolte pour avoir des statistiques de production correctes.
+ToutesH=Toutes les hausses
 
 # recolte/recolteHausseForm.html
 plus=Plus
