--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -462,6 +462,8 @@ retirerHausses=Remove supers
 ajouterHausses=Add supers
 selecthaussesretirer=Select supers to remove
 selecthaussesajouter=Select supers to add
+AffTtHausse=Show all supers. If you add supers for which the swarm or the apiary are not indicated, it will be necessary to complete the harvest supers to have correct production statistics.
+ToutesH=All supers
 
 # recolte/recolteHausseForm.html
 plus=More
