recolteDetail.html affiche le nb de hausses de récolte incomplètes

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -490,6 +490,7 @@ typeMiel=Type de miel
 poidsMielPot=Poids de miel mis en pot
 poidsMielMoyen=Poids de miel moyen par ruche
 XhaussesRec={0} hausses de la récolte
+Xincomplete=({0} incomplète(s))
 
 # recolte/recoltesStat.html
 productionessaim=Production par essaim.
