--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -490,6 +490,7 @@ typeMiel=Honey type
 poidsMielPot=Honey weight jarred
 poidsMielMoyen=Honey average weight per hive
 XhaussesRec={0} harvest supers
+Xincomplete=({0} incomplete)
 
 # recolte/recoltesStat.html
 productionessaim=Production by swarm. 
