formulaires de base retour avec sep

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -143,6 +143,7 @@ ruchesSansEven=ruche(s) sans événement depuis {0} semaines
 essaimDateNaissSupAcquis=essaim(s) date naissance reine supérieure à date acquisition
 
 # Templates commun
+sep=\u0020/\u0020
 modifier=Modifier
 modifierTout=Modifier tout
 nom=Nom
