titres avec retours et séparateur, suite

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -219,6 +219,8 @@ Note=Note
 NbRecolte=Nb récoltes
 
 # essaim/essaimsStatAges.html
+Moyenne=Moyenne
+EcartType= Écart type
 MoyenneE=Moyenne essaim
 EcartTypeE= Écart type essaim
 ageDesReines=Âge des reines
@@ -449,7 +451,7 @@ MaxE=Max essaim
 
 # recolte/recoltesStatEssaim.html
 Totalpage=Total page
-ProductionEssaims=Production Essaims/
+ProductionEssaims=Production Essaims
 tousEssaims=Afficher les essaims sans production
 
 # recolte/recoltesListe.html
