--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -218,6 +218,8 @@ Note=Mark
 NbRecolte=Harvest nb 
 
 # essaim/essaimsStatAges.html
+Moyenne=Mean
+EcartType= Standard deviation
 MoyenneE=Swarm Mean
 EcartTypeE= Swarm Standard deviation
 ageDesReines=Age of queens
@@ -448,7 +450,7 @@ MaxE=Swarm max
 
 # recolte/recoltesStatEssaim.html
 Totalpage=Total page
-ProductionEssaims=Production. Swarms/
+ProductionEssaims=Production. Swarms
 tousEssaims=Show swarms without production
 
 # recolte/recoltesListe.html
