--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -143,6 +143,7 @@ ruchesSansEven=hive(s) without event for {0} weeks
 essaimDateNaissSupAcquis=swarm date of birth queen greater than date of acquisition
 
 # Templates commun
+sep=\u0020/\u0020
 modifier=Modify
 modifierTout=Modify all
 nom=Name
@@ -451,7 +452,7 @@ MaxE=Swarm max
 # recolte/recoltesStatEssaim.html
 Totalpage=Total page
 ProductionEssaims=Production. Swarms
-tousEssaims=Show swarms without production
+tousEssaims=Also show swarms without production
 
 # recolte/recoltesListe.html
 statistiquesProd=Annual production statistics
