admin/infos ajout accord. ruches inactives qui ne sont pas au dépôt

--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -137,10 +137,11 @@ ruchesSansEssaimPasDepot=hive(s) without swarm, not at the depot
 essaimsHorsRuche=swarm(s) outside the hive
 ruchersLoinDeLeursRuches=apiaries more than {0}m from their hives
 rayonkm=Radius (km)
-surfacekm2=Surface (kmÂ²)
+surfacekm2=Surface (km²)
 ruchesAPlusde=hive(s) more than {0}m from their apiaries
 ruchesSansEven=hive(s) without event for {0} weeks
 essaimDateNaissSupAcquis=swarm date of birth queen greater than date of acquisition
+ruchesInactPasDepot=inactive hive(s) not at the depot
 
 # Templates commun
 sep=\u0020/\u0020
