admin/infos ajout du nombre de récoltes par année

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -120,9 +120,9 @@ ruchersdepot=rucher(s) (avec le dépôt)
 rucheset=ruches et 
 haussesactives=hausses actives	
 ruchesaudepot=ruche(s) au dépôt
-nonposees=non posées
+nonposees=non posée(s)
 ruchesavecessaim=ruche(s) avec essaim 
-posees=posées 
+posees=posée(s)\u0020
 Distance=Distance
 valeursParAnnee=Valeurs par année
 poidsMielEnPot=Poids miel en pot
