--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -122,7 +122,7 @@ haussesactives=active supers
 ruchesaudepot=hive(s) at the depot
 nonposees=free
 ruchesavecessaim=hive(s) with a swarm 
-posees=on a hive 
+posees=on a hive\u0020
 Distance=Distance
 valeursParAnnee=Values per year
 poidsMielEnPot=Honey weight in jar
