infos.html pluriels sans (s)

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -111,18 +111,18 @@ EssInactSansDisperKO=Essains inactifs sans événement dispersion
 EssInactSansDisperOK=Pas d'essain inactif sans événement dispersion
 
 # infos.html
-rucheS=ruche(s)
-essaim_s=essaim(s)
-hausseS=hausse(s)
+rucheS=ruche{0}
+essaim_s=essaim{0}
+hausseS=hausse{0}
 production=production
 elevage=élevage
-ruchersdepot=rucher(s) (avec le dépôt)
+ruchersdepot=rucher{0} (avec le dépôt)
 rucheset=ruches et 
 haussesactives=hausses actives	
-ruchesaudepot=ruche(s) au dépôt
-nonposees=non posée(s)
-ruchesavecessaim=ruche(s) avec essaim 
-posees=posée(s)\u0020
+ruchesaudepot=ruche{0} au dépôt
+nonposees=non posée{0}
+ruchesavecessaim=ruche{0} avec essaim 
+posees=posée{0}\u0020
 Distance=Distance
 valeursParAnnee=Valeurs par année
 poidsMielEnPot=Poids miel en pot
@@ -134,7 +134,7 @@ nbTraitements=Nb traitements
 ruchesAvecEssaimDepot=ruche(s) avec essaim au dépôt
 ruchesAvecHaussesDepot=ruche(s) avec hausses au dépôt
 ruchesSansEssaimPasDepot=ruche(s) sans essaim, pas au dépôt
-essaimsHorsRuche=essaim(s) hors ruche
+essaimsHorsRuche=essaim{0} hors ruche
 ruchersLoinDeLeursRuches=rucher(s) à plus de {0}m du barycentre de leurs ruches
 rayonkm=Rayon (km)
 surfacekm2=Surface (km²)
