--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -111,17 +111,17 @@ EssInactSansDisperKO=Inactive swarms without dispersion event
 EssInactSansDisperOK=No inactive swarm without dispersion event
 
 # infos.html
-rucheS=hive(s)
-essaim_s=swarm(s)
-hausseS=super(s)
+rucheS=hive{0}
+essaim_s=swarm{0}
+hausseS=super{0}
 production=production
 elevage=breeding
-ruchersdepot=apiarie(s) (with depot)
+ruchersdepot=apiarie{0} (with depot)
 rucheset=hives and 
 haussesactives=active supers	
-ruchesaudepot=hive(s) at the depot
+ruchesaudepot=hive{0} at the depot
 nonposees=free
-ruchesavecessaim=hive(s) with a swarm 
+ruchesavecessaim=hive{0} with a swarm 
 posees=on a hive\u0020
 Distance=Distance
 valeursParAnnee=Values per year
@@ -134,7 +134,7 @@ nbTraitements=Nb treatments
 ruchesAvecEssaimDepot=hive(s) with swarm at the depot
 ruchesAvecHaussesDepot=hive(s) with supers at the depot
 ruchesSansEssaimPasDepot=hive(s) without swarm, not at the depot
-essaimsHorsRuche=swarm(s) outside the hive
+essaimsHorsRuche=swarm{0} outside the hive
 ruchersLoinDeLeursRuches=apiaries more than {0}m from their hives
 rayonkm=Radius (km)
 surfacekm2=Surface (km²)
