infos.html valeurs par années ajout nb d'interventions dans les ruchers

--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -142,6 +142,7 @@ ruchesAPlusde=hive(s) more than {0}m from their apiaries
 ruchesSansEven=hive(s) without event for {0} weeks
 essaimDateNaissSupAcquis=swarm date of birth queen greater than date of acquisition
 ruchesInactPasDepot=inactive hive(s) not at the depot
+nbInterv=Number of interventions
 
 # Templates commun
 sep=\u0020/\u0020
