essaimGrapheEve.js ajout zoom sur les dates

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -200,8 +200,8 @@ notifPersite=Persistance
 dateDispersion=Date de dispersion
 commDisp=Commentaire dispersion
 
-# essaimsPoids.html
-vide=vide
+# essaimGrapheEve.html
+ZoomIni=Zoom initial
 
 # essaim/essaimEssaimerForm.html
 Essaimage=Essaimage
