--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -200,8 +200,8 @@ notifPersite=Persistence
 dateDispersion=Dispersion date
 commDisp=Dispersion comment
 
-# essaimsPoids.html
-vide=empty
+# essaimGrapheEve.html
+ZoomIni=Initial zoom
 
 # essaim/essaimEssaimerForm.html
 Essaimage=Swarming
