info bulle détail essaim "Graphique événements", doc

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -332,6 +332,7 @@ Fin=Fin
 essaimPasRuche=Cet essaim n'est pas dans une ruche
 histoRucheRucher=Historique ruche/rucher
 derniersEve=Derniers événements
+GrapheEve=Graphique des événements
 
 # essaim/essaimDispersionForm.html
 aideessaimdspersionform=Crée un événement dispersion, enlève l'essaim de la ruche et inactive l'essaim
