--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -332,6 +332,7 @@ Fin=End
 essaimPasRuche=This swarm is not in a hive
 histoRucheRucher=History hive/apiary
 derniersEve=Last events
+GrapheEve=Event graph
 
 # essaim/essaimDispersionForm.html
 aideessaimdspersionform=Create a dispersing event, remove the swarm from the hive and inactivate the swarm
