essaim graphe eve corrections bug zoom limites

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -202,6 +202,7 @@ commDisp=Commentaire dispersion
 
 # essaimGrapheEve.html
 ZoomIni=Zoom initial
+AucunEve=Aucun événement
 
 # essaim/essaimEssaimerForm.html
 Essaimage=Essaimage
