--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -202,6 +202,7 @@ commDisp=Dispersion comment
 
 # essaimGrapheEve.html
 ZoomIni=Initial zoom
+AucunEve=no events
 
 # essaim/essaimEssaimerForm.html
 Essaimage=Swarming
