infos.html nb jours d'interventions et nb jours intervention par rucher

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -142,7 +142,9 @@ ruchesAPlusde=ruche(s) à plus de {0}m de leurs ruchers
 ruchesSansEven=ruche(s) sans événement depuis {0} semaines
 essaimDateNaissSupAcquis=essaim(s) date naissance reine supérieure à date acquisition
 ruchesInactPasDepot=ruche(s) inactives qui ne sont pas au dépôt
-nbInterv=Nombre d'interventions
+nbIntervRucher=Nb jours intervention par rucher
+nbInterv=Nb jours intervention
+ElementActifUniq=Éléments actifs uniquement :
 
 # Templates commun
 sep=\u0020/\u0020
