--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -142,7 +142,9 @@ ruchesAPlusde=hive(s) more than {0}m from their apiaries
 ruchesSansEven=hive(s) without event for {0} weeks
 essaimDateNaissSupAcquis=swarm date of birth queen greater than date of acquisition
 ruchesInactPasDepot=inactive hive(s) not at the depot
-nbInterv=Number of interventions
+nbIntervRucher=Nb of days of intervention per apiary
+nbInterv=Nb of days of intervention
+ElementActifUniq=Active elements only :
 
 # Templates commun
 sep=\u0020/\u0020
