essaim graphe événements ajout checkbox afficher les échelles

--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -205,6 +205,7 @@ commDisp=Dispersion comment
 # essaimGrapheEve.html
 ZoomIni=Initial zoom
 AucunEve=no events
+AfficherEchelle=Show scales
 
 # essaim/essaimEssaimerForm.html
 Essaimage=Swarming
