--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -205,6 +205,7 @@ commDisp=Commentaire dispersion
 # essaimGrapheEve.html
 ZoomIni=Zoom initial
 AucunEve=Aucun événement
+AfficherEchelle=Afficher les échelles
 
 # essaim/essaimEssaimerForm.html
 Essaimage=Essaimage
