hausseGraphePose affiche le nombre de hausses posées dans le temps

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -400,6 +400,9 @@ afficherPlus=Afficher plus
 
 #################### hausse ########################################
 
+# hausse/hausseGraphePose.html
+GrapheHaussePose=Graphique nombre de hausses posées
+
 # hausse/hausseForm.html
 saisirnbcadresinfmax=Saisir le nombre de cadres < Nombre de cadres max
 nombredecadresmax=Nombre de cadres max
