--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -400,6 +400,9 @@ afficherPlus=Show more
 
 #################### hausse ########################################
 
+# hausse/hausseGraphePose.html
+GrapheHaussePose=Graph number of frames installed
+
 # hausse/hausseForm.html
 saisirnbcadresinfmax=Get number of frames < Max frame number
 nombredecadresmax=Max frame number
