création de la liste des événements Pose/Retrait hausse

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -57,6 +57,9 @@ PasDeHausseCree=Pas de hausse créée
 # doc
 urldoc=/doc/ruches.html#%5F%5FRefHeading%5F%5F%5FToc
 
+# navbar.html
+PoseRetraitHausse=Pose/Retrait hausse
+
 # include.html
 liste=Liste
 listedetail=Liste <span class="menurac">d</span>étaillée
@@ -391,6 +394,9 @@ evenementremplissagehausse=Événements remplissage hausse
 # evenement/evenementRucheAjoutListe.html
 evenementsrucheajout=Événements ruche ajout rucher
 provenance=Provenance
+
+# evenement/evenementPoseHausse.html
+evtsPoseRetraitHausses=Événements pose/retrait hausse
 
 # evenement/evenementForm.html
 ajouterEvenement=Ajouter un événement
