--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -57,6 +57,9 @@ PasDeHausseCree=No super created
 # doc
 urldoc=/doc/ruches.html#%5F%5FRefHeading%5F%5F%5FToc
 
+# navbar.html
+PoseRetraitHausse=Pose/Remove super
+
 # include.html
 liste=List
 listedetail=<span class="menurac">D</span>etailed list
@@ -391,6 +394,9 @@ evenementremplissagehausse=Super filling events
 # evenement/evenementRucheAjoutListe.html
 evenementsrucheajout=Hive add in apiary events
 provenance=From
+
+# evenement/evenementPoseHausse.html
+evtsPoseRetraitHausses=Pose/removal super events
 
 # evenement/evenementForm.html
 ajouterEvenement=Add event
