--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -408,6 +408,9 @@ afficherPlus=Afficher plus
 
 # hausse/hausseGraphePose.html
 GrapheHaussePose=Graphique nombre de hausses posées
+nbHaussesP=Nombre de hausses posées
+nbHaussesT=Nombre de hausses total
+recNbHausses=Récolte, nb hausses
 
 # hausse/hausseForm.html
 saisirnbcadresinfmax=Saisir le nombre de cadres < Nombre de cadres max
