--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -408,6 +408,9 @@ afficherPlus=Show more
 
 # hausse/hausseGraphePose.html
 GrapheHaussePose=Graph number of frames installed
+nbHaussesP=Number of super installed
+nbHaussesT=Total number of super
+recNbHausses=Harvest, number of super
 
 # hausse/hausseForm.html
 saisirnbcadresinfmax=Get number of frames < Max frame number
