ruchesGraphe.html graphe nombre de ruches actives en fonction du temps.

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -580,6 +580,7 @@ ajouterRuche=Ajouter une ruche
 listeRuches=Liste des ruches
 type=Type
 TousRuchers=Tous les ruchers
+GrapheNbRuches=Graphique nombre de ruches
 
 # ruche/ruchesListeRucher.html
 daterucher=Date rucher
