--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -580,6 +580,7 @@ ajouterRuche=Add a hive
 listeRuches=Hives list
 type=Type
 TousRuchers=All apiaries
+GrapheNbRuches=Hive count chart
 
 # ruche/ruchesListeRucher.html
 daterucher=Apiary date
