nombre de ruches graphes, ajout courbe ruches en production

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -529,6 +529,9 @@ poidsAp=Poids après
 
 #################### ruche ########################################
 
+# ruche/ruchesGraphe.html
+RuchesProd=Ruches en production
+
 # ruche/ruchesListePlus.html ruche/ruchesListePlusRucher.html
 evenement1=Événement1
 evenement2=Événement2
