--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -529,6 +529,9 @@ poidsAp=Weight after
 
 #################### ruche ########################################
 
+# ruche/ruchesGraphe.html
+RuchesProd=Hives in production
+
 # ruche/ruchesListePlus.html ruche/ruchesListePlusRucher.html
 evenement1=Event1
 evenement2=Event2
