essaimsGraphe.html courbe nombre d'essaims

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -267,6 +267,7 @@ souche=Souche
 agressivite=Agressivité
 proprete=Propreté
 listeEssaims=Liste des essaims
+GrapheNbEssaims=Graphique nombre d'essaims
 
 # essaim/essaimSucreLotForm.html
 ajoutSucreLot=Ajout de sucre au lot
