--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -267,6 +267,7 @@ souche=Stem
 agressivite=Agressiveness
 proprete=Cleanliness
 listeEssaims=Swarms list
+GrapheNbEssaims=Swarm count chart
 
 # essaim/essaimSucreLotForm.html
 ajoutSucreLot=Add sugar to the batch
