essaimsGraphe courbe nb essaim prod, simplification sql

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -201,6 +201,9 @@ notifPersite=Persistance
 
 #################### essaim ########################################
 
+# essaim/essaimsGraphe
+EssaimsProd=Essaims production
+
 # essaimForm.html
 dateDispersion=Date de dispersion
 commDisp=Commentaire dispersion
