--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -201,6 +201,9 @@ notifPersite=Persistence
 
 #################### essaim ########################################
 
+# essaim/essaimsGraphe
+EssaimsProd=Swarms production
+
 # essaimForm.html
 dateDispersion=Dispersion date
 commDisp=Dispersion comment
