essaim graphe du nombre d'essaims de production, calcul plus fin

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -148,6 +148,8 @@ ruchesInactPasDepot=ruche(s) inactives qui ne sont pas au dépôt
 nbIntervRucher=Nb jours intervention par rucher
 nbInterv=Nb jours intervention
 ElementActifUniq=Éléments actifs uniquement :
+NbRuchesAcq=Nb ruches acquisition
+NbHaussesAcq=Nb hausses acquisition
 
 # Templates commun
 sep=\u0020/\u0020
