--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -148,6 +148,8 @@ ruchesInactPasDepot=inactive hive(s) not at the depot
 nbIntervRucher=Nb of days of intervention per apiary
 nbInterv=Nb of days of intervention
 ElementActifUniq=Active elements only :
+NbRuchesAcq=Nb acquired hives
+NbHaussesAcq=Nb acquired supers
 
 # Templates commun
 sep=\u0020/\u0020
