liste des essaims avec descendance

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -203,6 +203,9 @@ notifPersite=Persistance
 
 #################### essaim ########################################
 
+# essaim/essaimsDescendance.html
+Racine=Racine
+
 # essaim/essaimsGraphe
 EssaimsProd=Essaims production
 
@@ -273,6 +276,7 @@ agressivite=Agressivité
 proprete=Propreté
 listeEssaims=Liste des essaims
 GrapheNbEssaims=Graphique nombre d'essaims
+Descendance=Descendance
 
 # essaim/essaimSucreLotForm.html
 ajoutSucreLot=Ajout de sucre au lot
