--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -203,6 +203,9 @@ notifPersite=Persistence
 
 #################### essaim ########################################
 
+# essaim/essaimsDescendance.html
+Racine=Root
+
 # essaim/essaimsGraphe
 EssaimsProd=Swarms production
 
@@ -273,6 +276,7 @@ agressivite=Agressiveness
 proprete=Cleanliness
 listeEssaims=Swarms list
 GrapheNbEssaims=Swarm count chart
+Descendance=Descendants
 
 # essaim/essaimSucreLotForm.html
 ajoutSucreLot=Add sugar to the batch
