--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -205,6 +205,7 @@ notifPersite=Persistance
 
 # essaim/essaimsDescendance.html
 Racine=Racine
+Profondeur=Profondeur
 
 # essaim/essaimsGraphe
 EssaimsProd=Essaims production
