--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -205,6 +205,7 @@ notifPersite=Persistence
 
 # essaim/essaimsDescendance.html
 Racine=Root
+Profondeur=Depth
 
 # essaim/essaimsGraphe
 EssaimsProd=Swarms production
