essaims descendances, titre, actifs/tous

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -206,6 +206,7 @@ notifPersite=Persistance
 # essaim/essaimsDescendance.html
 Racine=Racine
 Profondeur=Profondeur
+Descendances=Descendances
 
 # essaim/essaimsGraphe
 EssaimsProd=Essaims production
