--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -206,6 +206,7 @@ notifPersite=Persistence
 # essaim/essaimsDescendance.html
 Racine=Root
 Profondeur=Depth
+Descendances=Descendants
 
 # essaim/essaimsGraphe
 EssaimsProd=Swarms production
