essaims descendances liste des arbres avec profondeur, nb essaims...

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -207,6 +207,9 @@ notifPersite=Persistance
 Racine=Racine
 Profondeur=Profondeur
 Descendances=Descendances
+GraphArbre=Graphique arbre descendance
+NombreEssaims=Nombre d'essaims
+ArbreInactif=Arbre inactif
 
 # essaim/essaimsGraphe
 EssaimsProd=Essaims production
