--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -207,6 +207,9 @@ notifPersite=Persistence
 Racine=Root
 Profondeur=Depth
 Descendances=Descendants
+GraphArbre=Descendants tree chart
+NombreEssaims=Number of swarms
+ArbreInactif=Inactive tree
 
 # essaim/essaimsGraphe
 EssaimsProd=Swarms production
