essaimsListe abréviations Agressivité, Properté avec popup

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -273,12 +273,18 @@ RED=Rouge
 GREEN=Vert
 ORANGE=
 ajouterEssaim=Ajouter un essaim
+Reine=Reine
+marque=marque
+couleur=couleur
+naissance=naissance
 reineMarquee=Reine marquée
 reineCouleurMarquage=Couleur de marquage
 reineDateNaissance=Date de naissance
 souche=Souche
 agressivite=Agressivité
 proprete=Propreté
+ag=Ag
+pr=Pr
 listeEssaims=Liste des essaims
 GrapheNbEssaims=Graphique nombre d'essaims
 Descendance=Descendance
