--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -273,12 +273,18 @@ RED=Red
 GREEN=Green
 ORANGE=
 ajouterEssaim=Add a swarm
+Reine=Queen
+marquee=mark
+couleur=color
+naissance=birth
 reineMarquee=Marked queen
 reineCouleurMarquage=Marking color
 reineDateNaissance=Date of birth
 souche=Stem
 agressivite=Agressiveness
 proprete=Cleanliness
+ag=Ag
+pr=Cl
 listeEssaims=Swarms list
 GrapheNbEssaims=Swarm count chart
 Descendance=Descendants
