--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -499,6 +499,7 @@ statistiquesProd=Statistiques production annuelle
 ajouterRecolte=Ajouter une récolte
 Recoltes=Récoltes
 RucherS=Rucher(s)
+MielPot=Miel pot
 
 # recolte/recolteChoixHausses.html
 retirerHausses=Retirer des hausses
