--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -499,6 +499,7 @@ statistiquesProd=Annual production statistics
 ajouterRecolte=Add a harvest
 Recoltes=Harvests
 RucherS=Apiary(ies)
+MielPot=Honey jarred
 
 # recolte/recolteChoixHausses.html
 retirerHausses=Remove supers
