distances ruchers, ajout de la vitesse, header Voiture colspan 3

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -630,11 +630,15 @@ doitEtreSupA=Doit être supérieure à
 
 #################### rucher ########################################
 
-# rucher/rucherDists
+# rucher/rucherDists.html
 distances=Calcul des nouvelles distances
 distancesReset=Recalcul de toutes les distances
 distCalc=Calcul des nouvelles distances : attention cela peut prendre plusieurs minutes
 distCalcReset=Recalcul de toutes les distances : attention cela peut prendre plusieurs dizaines de minutes
+Voiture=Voiture
+Vitesse=Vitesse
+DistanceO=Distance vol d'oiseau
+Distances=Distances
 
 # rucher/rucherPoids.html
 poidsessaims=Poids des essaims
@@ -643,12 +647,6 @@ aucunePesee=Aucune pesée
 # rucher/rucherPoidsForm.hml
 PoidsVide=Poids vide
 Precedent=Précédent
-
-# rucher/ruchersDist.html
-DistanceV=Distance voiture
-TempsV=Temps voiture
-DistanceO=Distance vol d'oiseau
-Distances=Distances
 
 # rucher/rucherStatistiques.html
 aideStatistiqueRucher=Récolte : nombre de récoltes<br/>Poids de miel produit Total, Max, Min et Moyen en kg :<br/>- Total pour le rucher<br/>- Récolte Max et Min<br/>- Moyen par récolte
