--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -630,11 +630,15 @@ doitEtreSupA=Must be greater than
 
 #################### rucher ########################################
 
-# rucher/rucherDists
+# rucher/rucherDists.html
 distances=Calculation of new distances
 distancesReset=Recalculation of all distances
 distCalc=Calculation of new distances: be careful this can take several minutes
 distCalcReset=Recalculation of all distances: be careful this can take several ten minutes
+Voiture=Car
+Vitesse=Speed
+DistanceO=Distance crow
+Distances=Distances
 
 # rucherPoids.html
 poidsessaims=Swarm weights
@@ -643,12 +647,6 @@ aucunePesee=No weighing
 # rucher/rucherPoidsForm.hml
 PoidsVide=Empty weight
 Precedent=Previous
-
-# rucher/ruchersDist.html
-DistanceV=Distance car
-TempsV=Time car
-DistanceO=Distance crow
-Distances=Distances
 
 # rucher/rucherStatistiques.html
 aideStatistiqueRucher=Harvest : number of harvests<br/>Weight of honey produced, Max, Min and Average (kg) :<br/>- Total for apiary<br/>- Harvest Max and Min<br/>- Average by harvest
