GPPluginOpenlayers 3.4.1 -> 3.4.2 et dispersion d'un lot d'essaims

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -289,6 +289,9 @@ listeEssaims=Liste des essaims
 GrapheNbEssaims=Graphique nombre d'essaims
 Descendance=Descendance
 
+# essaim/essaimDispersionLotForm.html
+dispersionLot=Dispersion du lot
+
 # essaim/essaimSucreLotForm.html
 ajoutSucreLot=Ajout de sucre au lot
 
