--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -289,6 +289,9 @@ listeEssaims=Swarms list
 GrapheNbEssaims=Swarm count chart
 Descendance=Descendants
 
+# essaim/essaimDispersionLotForm.html
+dispersionLot=Batch dispersion
+
 # essaim/essaimSucreLotForm.html
 ajoutSucreLot=Add sugar to the batch
 
