--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -258,6 +258,7 @@ MielDescKg=Miel descendance(kg)
 Inactif=Inactif
 
 # essaim/essaimsListe.html
+Disperser=Disperser
 essaimAcquisition=Essaim acquisition
 statistiquesproduction=Statistiques production
 statistiquesage=Statistiques âge des reines
