--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -258,6 +258,7 @@ MielDescKg=Descendants honey(kg)
 Inactif=Inactive
 
 # essaim/essaimsListe.html
+Disperser=Disperse
 essaimAcquisition=Swarm acquisition
 statistiquesproduction=Production satistics
 statistiquesage=Queens age statistics
