doc dipsersion par lot

--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -367,9 +367,9 @@ derniersEve=Last events
 GrapheEve=Event graph
 
 # essaim/essaimDispersionForm.html
-aideessaimdspersionform=Create a dispersing event, remove the swarm from the hive and inactivate the swarm
+aideessaimdspersionform=Inactivates the swarm, updates the dispersal date and comment. Remove the swarm from its hive.<br/>If requested: moves the hive to the depot apiary and creates a 0 frame event.<br/>If new queen requested: replaces the dispersed swarm with another.
 nouvellereine=New queen, swarm for hive
-creationevecadrezero=Create 0 super event
+creationevecadrezero=Create 0 frame event
 dispersion=Dispersing 
 
 #################### evenement ########################################
