--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -367,7 +367,7 @@ derniersEve=Derniers événements
 GrapheEve=Graphique des événements
 
 # essaim/essaimDispersionForm.html
-aideessaimdspersionform=Crée un événement dispersion, enlève l'essaim de la ruche et inactive l'essaim
+aideessaimdspersionform=Inactive l'essaim, met à jour la date et le commentaire de dispersion. Retire l'essaim de sa ruche.<br/>Si demandés : déplace la ruche au rucher dépôt et crée en événement 0 cadre.<br/>Si remérage demandé : remplace l'essaim dispersé par un autre.
 nouvellereine=Remérage, essaim à mettre dans la ruche
 creationevecadrezero=Création événement 0 cadre
 dispersion=Dispersion 
