essaims, hausses, ruches traitement par lot amélioration messages

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -263,7 +263,7 @@ Disperser=Disperser
 essaimAcquisition=Essaim acquisition
 statistiquesproduction=Statistiques production
 statistiquesage=Statistiques âge des reines
-selectessaimstraiter=Sélectionner les essaims à traiter
+selectessaimstraiter=sélectionner les essaims
 evenementsSucre=Ajouter des événements Sucre
 evenementsTraitement=Ajouter des événements Traitement
 evenementsCommentaire=Ajouter des événements Commentaire
@@ -458,7 +458,7 @@ Hausses=Hausses
 remplissage=Remplissage %
 
 # hausses/hausseListe.html
-selecthaussestraiter=Sélectionner les hausses à traiter
+selecthaussestraiter=sélectionner les hausses
 
 #################### personne ########################################
 
@@ -605,7 +605,7 @@ typeRucheSuppNon=Ce type de ruche ne peut être supprimé
 
 # ruche/ruchesListe.html
 ruche=Ruche
-selectruchestraiter=Sélectionner les ruches à traiter
+selectruchestraiter=sélectionner les ruches
 ajouterRuche=Ajouter une ruche
 listeRuches=Liste des ruches
 type=Type
