--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -263,7 +263,7 @@ Disperser=Disperse
 essaimAcquisition=Swarm acquisition
 statistiquesproduction=Production satistics
 statistiquesage=Queens age statistics
-selectessaimstraiter=Select swarms for treatment
+selectessaimstraiter=select swarms
 evenementsSucre=Add sugar events
 evenementsTraitement=Add treatment events
 evenementsCommentaire=Add comment events
@@ -458,7 +458,7 @@ Hausses=Supers
 remplissage=Filling %
 
 # hausses/hausseListe.html
-selecthaussestraiter=Select supers to be processed
+selecthaussestraiter=select supers
 
 #################### personne ########################################
 
@@ -605,7 +605,7 @@ typeRucheSuppNon=You cannot delete this hive type
 
 # ruche/ruchesListe.html
 ruche=Hive
-selectruchestraiter=Select hives for treatment
+selectruchestraiter=select hives
 ajouterRuche=Add a hive
 listeRuches=Hives list
 type=Type
