infos ajouté nbr ruchers actifs avec ruches prod et essaim et hausses

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -120,6 +120,8 @@ hausseS=hausse{0}
 production=production
 elevage=élevage
 ruchersdepot=rucher{0} (avec le dépôt)
+ruchersRuches=rucher{0} avec ruches de production avec essaim.
+ruchersHausses=rucher{0} avec ruches de production avec essaim et hausses.
 rucheset=ruches et 
 haussesactives=hausses actives	
 ruchesaudepot=ruche{0} au dépôt
