--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -120,6 +120,8 @@ hausseS=super{0}
 production=production
 elevage=breeding
 ruchersdepot=apiarie{0} (with depot)
+ruchersRuches=rucher{0} avec ruches de production avec essaim.
+ruchersHausses=rucher{0} avec ruches de production avec essaim et hausses.
 rucheset=hives and 
 haussesactives=active supers	
 ruchesaudepot=hive{0} at the depot
